2008-08-27  Armin Burgmeier  <armin@arbur.net>

	* MSVC_Net2005/cairomm/cairomm.rc.in: Replaced #include "afxres.h" by
	#include <windows.h> which does the job equally well, and allows
	compilation with the freely available Visual Studio Express compiler.
	Bug #17322.

2008-08-21  Jonathon Jongsma  <jjongsma@gnome.org>

	* tests/test-surface.cc: fix the image surface tests that create a file from a
	png stream to return a valid PNG stream so they don't throw an exception on
	creation.

2008-08-19  Jonathon Jongsma  <jjongsma@gnome.org>

	* cairomm/surface.cc:
	* cairomm/surface.h: add sigc::slot versions of all of the functions that take
	a cairo_write_func_t or cairo_read_func_t
	* tests/Makefile.am: add a couple basic tests for the surfaced slot functions

2008-08-18  Jonathon Jongsma  <jjongsma@gnome.org>

	* cairomm/fontface.h: Add a bunch of documentation for the new FontFace API

2008-08-18  Jonathon Jongsma  <jjongsma@gnome.org>

	* cairomm/scaledfont.h: fix all of the TODOS by providing alternate functions
	that begin with get_ to provide consistency with other parts of cairomm (and
	glibmm, etc).

2008-08-14  Jonathon Jongsma  <jjongsma@gnome.org>

	* cairomm/context.h: move some text-related typedefs into the fontface
	header since they're needed for new user font API and that's really where they
	should be owned.  context.h includes fontface.h, so there should not be any
	breakage for people who were just including context.h
	* cairomm/enums.h: add user font type to font type enum
	* cairomm/fontface.cc:
	* cairomm/fontface.h: add UserFontFace class.  This class has a set of
	callbacks that can be used to do certain things.  In order to do this in a
	flexible way, I have added libsigc++ as a dependency of cairo to achieve this
	* configure.in: add check for libsigc++
	* tests/test-font-face.cc: add tests for UserFontFace

2008-08-15  Jonathon Jongsma  <jjongsma@gnome.org>

	* cairomm/scaledfont.h: